--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,51 @@
-### IntelliJ IDEA ###
-out/
-!**/src/main/**/out/
-!**/src/test/**/out/
-.kotlin
+# Maven
+target/
+.m2/
+*.jar
+*.war
+*.rar
+*.ear
 
-### Eclipse ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-bin/
-!**/src/main/**/bin/
-!**/src/test/**/bin/
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-
-### VS Code ###
+# IDE
+.idea/
 .vscode/
-
-### Mac OS ###
+*.swp
+*.swo
+*~
 .DS_Store
 
-### Local ###
-.idea/
+# Build
+build/
+dist/
+.gradle/
+
+# Java
+*.class
+*.log
+*.ctxt
+.classpath
+.project
+.settings/
+*.jks
+
+# Maven
+dependency-reduced-pom.xml
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+pom.xml.bak
+release.properties
+.flattened-pom.xml
+
+# IntelliJ
+*.iml
+*.iws
+*.ipr
+out/
+
+# Misc
+.env
+.env.local
+*.bak
+
