--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,12 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
+        <!-- Spring Boot Validation -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
         <!-- PostgresSQL -->
         <dependency>
             <groupId>org.postgresql</groupId>
